2007-07-23  Stefan Kost  <ensonic@users.sf.net>

	* docs/libs/gst-plugins-base-libs-sections.txt:
	  Cleanup the docs.

2007-07-23  Wim Taymans  <wim.taymans@gmail.com>

	Patch by: Dan Williams <dcbw at redhat dot com>

	* gst/playback/gstplaybasebin.c:
	(gst_play_base_bin_get_streaminfo_value_array):
	Don't return NULL when querying the stream info value array but instead
	return an empty array. Fixes #459204.

2007-07-23  Tim-Philipp Müller  <tim at centricular dot net>

	* gst/playback/gsturidecodebin.c:
	  Init debug category before using it.

2007-07-21  Jan Schmidt  <thaytan@noraisin.net>

	* gst-libs/gst/interfaces/mixer.h:
	Add padding vars in place of the signal pointers
	when building with DISABLE_DEPRECATED so that the
	interface structure doesn't change size.

2007-07-20  Jan Schmidt  <thaytan@noraisin.net>

	* docs/libs/gst-plugins-base-libs-sections.txt:
	* ext/alsa/gstalsamixer.c:
	* ext/alsa/gstalsamixer.h:
	* ext/alsa/gstalsamixerelement.c:
	* ext/alsa/gstalsamixertrack.c:
	* gst-libs/gst/interfaces/mixer.c:
	* gst-libs/gst/interfaces/mixer.h:
	* gst-libs/gst/interfaces/mixeroptions.c:
	* gst-libs/gst/interfaces/mixeroptions.h:
	* gst-libs/gst/interfaces/mixertrack.c:
	* gst-libs/gst/interfaces/mixertrack.h:
	* tests/check/Makefile.am:
	* tests/check/libs/mixer.c:

	Patch By: Marc-Andre Lureau <marcandre.lureau@gmail.com>
	Fixes: #152864 

	Add support for notifying mixer changes on the message bus, and
	implement it in alsamixer.

	API: gst_mixer_get_mixer_flags
	API: gst_mixer_message_parse_mute_toggled
	API: gst_mixer_message_parse_record_toggled
	API: gst_mixer_message_parse_volume_changed
	API: gst_mixer_message_parse_option_changed
	API: GstMixerMessageType
	API: GstMixerFlags

2007-07-20  Michael Smith <msmith@fluendo.com>

	* sys/xvimage/xvimagesink.c: (gst_xvimagesink_xvimage_new),
	(gst_xvimagesink_get_xv_support), (gst_xvimagesink_setcaps):
	  xcontext->im_format is only for testing XShm support (as the header